--- a/diplom.bib
+++ b/diplom.bib
@@ -1,69 +1,96 @@
-@book{kopka1991latex,
-	author = {Kopka, Helmut and Rahtz, Sebastian},
-	publisher = {Addison-Wesley},
-	title = {LaTeX: Einf\"{u}hrung},
+
+@online{_how_????,
+	title = {how to code - Google-Suche},
+	url = {https://www.google.at/search?source=hp&ei=S7weWrmUE8WNkwXMwqeoDw&q=how+to+code&oq=how+to+code&gs_l=psy-ab.3..0l10.1293.3077.0.3223.11.9.0.2.2.0.198.1051.1j6.7.0....0...1c.1.64.psy-ab..2.9.1074...0i131k1.0.UkLX7cDZClk},
+	urldate = {2017-11-29},
+	note = {b1},
+	file = {how to code - Google-Suche:C\:\\Users\\cleme\\Zotero\\storage\\GGQVV939\\search.html:text/html}
+}
+
+@online{_learn_????,
+	title = {Learn How to Code Part I: Variables and Basic Data Types},
+	url = {https://lifehacker.com/5736011/learn-how-to-code-part-i-variables-and-basic-data-types},
+	urldate = {2017-11-29},
+	file = {Learn How to Code Part I\: Variables and Basic Data Types:C\:\\Users\\cleme\\Zotero\\storage\\HC2NB6KG\\learn-how-to-code-part-i-variables-and-basic-data-types.html:text/html}
+}
+
+@online{dachis_learn_2001,
+	title = {Learn How to Code Part I: Variables and Basic Data Types},
+	url = {https://lifehacker.com/5736011/learn-how-to-code-part-i-variables-and-basic-data-types},
+	shorttitle = {Learn How to Code Part I},
+	abstract = {Want to learn how to code but don\&\#39;t know where to start? We\&\#39;ve got you covered. We\&\#39;ll be teaching you the basics all week, and here\&\#39;s your first lesson.},
+	titleaddon = {Lifehacker},
+	author = {Dachis, Adam},
+	urldate = {2017-11-29},
+	date = {2001-12-12},
+	file = {Snapshot:C\:\\Users\\cleme\\Zotero\\storage\\GZVPBE2Y\\learn-how-to-code-part-i-variables-and-basic-data-types.html:text/html}
+}
+
+@online{_programmer_????,
+	title = {Programmer 101: Teach Yourself How to Code},
+	url = {https://lifehacker.com/5401954/programmer-101-teach-yourself-how-to-code},
+	urldate = {2017-11-29},
+	file = {Programmer 101\: Teach Yourself How to Code:C\:\\Users\\cleme\\Zotero\\storage\\QNMWDFPZ\\programmer-101-teach-yourself-how-to-code.html:text/html}
+}
+
+@book{kopka_latex:_1991,
+	title = {{LaTeX}: Einführung},
 	volume = {2},
-	year = {1991}
+	publisher = {Addison-Wesley},
+	author = {Kopka, Helmut and Rahtz, Sebastian},
+	date = {1991}
 }
 
-@online{latexKomp,
-	lastchecked = {2014-09-14},
-	title = {LaTeX-Kompendium -- Wikibooks, Sammlung freier Lehr-, Sach- und Fachb\"{u}cher},
-	url = {http://de.wikibooks.org/wiki/LaTeX-Kompendium}
+@online{_latex-kompendium_????,
+	title = {{LaTeX}-Kompendium – Wikibooks, Sammlung freier Lehr-, Sach- und Fachbücher},
+	url = {http://de.wikibooks.org/wiki/LaTeX-Kompendium},
+	urldate = {2014-09-14}
 }
 
-@online{quelle,
-	lastchecked = {2014-09-01},
-	title = {Quellenangabe -- Wikipedia},
-	url = {http://de.wikipedia.org/wiki/Quellenangabe#.C3.96sterreich}
+@online{_quellenangabe_????,
+	title = {Quellenangabe – Wikipedia},
+	url = {http://de.wikipedia.org/wiki/Quellenangabe#.C3.96sterreich},
+	urldate = {2014-09-01}
 }
 
-@online{wiki:quelle,
-	author = {Wikipedia},
-	lastchecked = {2014-09-14},
-	title = {Quellenangabe --- Wikipedia{,} Die freie Enzyklopädie},
-	url = {http://de.wikipedia.org/w/index.php?title=Quellenangabe&oldid=131343956}
+@online{wikipedia_quellenangabe_????,
+	title = {Quellenangabe — Wikipedia, Die freie Enzyklopädie},
+	url = {http://de.wikipedia.org/w/index.php?title=Quellenangabe&oldid=131343956},
+	author = {{Wikipedia}},
+	urldate = {2014-09-14}
 }
 
-@online{ wiki:zitat,
-   author = "Wikipedia",
-   title = "Zitat --- Wikipedia{,} Die freie Enzyklopädie",
-   url = "http://de.wikipedia.org/w/index.php?title=Zitat&oldid=134064196",
-   lastchecked = "2014-09-14"
- }
+@online{wikipedia_zitat_????,
+	title = {Zitat — Wikipedia, Die freie Enzyklopädie},
+	url = {http://de.wikipedia.org/w/index.php?title=Zitat&oldid=134064196},
+	author = {{Wikipedia}},
+	urldate = {2014-09-14}
+}
 
-@online{ris57,
-	lastchecked = {2014-09-14},
+@online{_urheberrechtsgesetz_????,
 	title = {Urheberrechtsgesetz},
-	url = {http://www.ris.bka.gv.at/Dokumente/Bundesnormen/NOR40041632/NOR40041632.html}
+	url = {http://www.ris.bka.gv.at/Dokumente/Bundesnormen/NOR40041632/NOR40041632.html},
+	urldate = {2014-09-14}
 }
 
-@article{dittrich,
-	author = {Dittrich, Robert},
-	isbn = {3406516831},
-	journal = {Urheberrecht im Informationszeitalter. Festschrift f\"{u}r Wilhelm Nordemann.},
-	location = {M\"{u}nchen},
-	pages = {617--624},
+@article{dittrich_zur_2004,
 	title = {Zur Quellenangabe bei Zitaten.},
-	year = {2004}
+	pages = {617--624},
+	journaltitle = {Urheberrecht im Informationszeitalter. Festschrift für Wilhelm Nordemann.},
+	author = {Dittrich, Robert},
+	date = {2004}
 }
 
-@online{layout,
-  lastchecked = {2014-09-17},
-  url = {http://www.siart.de/typografie/latextipps.xhtml#layout},
-  title = {LaTeX-Tipps}
+@online{_latex-tipps_????,
+	title = {{LaTeX}-Tipps},
+	url = {http://www.siart.de/typografie/latextipps.xhtml#layout},
+	urldate = {2014-09-17}
 }
 
-@online{listingtipp,
-  lastchecked = {2014-09-17},
-  url = {http://uweziegenhagen.de/?p=1500},
-  title={LaTeX: Umlaute in utf8 Listings korrekt ausgeben}
-}
-
-@online{hagenberg,
-lastchecked = {2016-10-09},
-url = {https://github.com/Digital-Media/HagenbergThesis},
-title={Hagenberg LaTeX Thesis Template}
+@online{_latex:_????,
+	title = {{LaTeX}: Umlaute in utf8 Listings korrekt ausgeben},
+	url = {http://uweziegenhagen.de/?p=1500},
+	urldate = {2014-09-17}
 }
 
 @online{dmx512/1990,
@@ -86,5 +113,3 @@ title={Hagenberg LaTeX Thesis Template}
 	urldate = {2018-02-11},
 	file = {DMX german:C\:\\Users\\cleme\\Zotero\\storage\\RRSTVAYJ\\dmxdu.html:text/html}
 }
-
-
