--- a/markdown/Clemens.md/DMX.md.tex
+++ b/markdown/Clemens.md/DMX.md.tex
@@ -23,7 +23,7 @@ Bild \ref{dmx-signal}.
 
 \begin{figure}
 \centering
-\includegraphics{bilder/Clemens/dmx.jpg}
+\includegraphics[width=0.9\textwidth]{bilder/Clemens/dmx.jpg}
 \caption{Darstellung des DMX-Signals\label{dmx-signal}}
 \end{figure}
 
