fixed some stuff

--- a/diplomarbeit.tex
+++ b/diplomarbeit.tex
@@ -436,7 +436,7 @@ Wien, \today
 % \input{markdown/Clemens.md/myChapter.md}
 
 %%%%%%%%%%%%%%%%%%%%%% Chapter Zusätzliches %%%%%%%%%%%%%%%%%%%%%
-\chapter{Zusätzliches}\label{Zusätzlicghes}
+\chapter{Zusätzliches}\label{Zusätzliches}
 
 \section{Bedienungsanleitung}\label{Bedienungsanleitung}
 
