--- a/markdown/Dominik.md/Flexbox.md.tex
+++ b/markdown/Dominik.md/Flexbox.md.tex
@@ -42,8 +42,8 @@ Abbildung 1.
 
 \begin{figure}
 \centering
-\includegraphics{bilder/Dominik/Flexbox_Illustration_1.png}
-\caption{alt text}
+\includegraphics[width=0.9\textwidth]{bilder/Dominik/Flexbox_Illustration_1.png}
+\caption{Flexbox Beispiel}
 \end{figure}
 
 Mithilfe von Flexbox ist dieses Verhalten einfach zu erzielen.\\
