--- a/diplomarbeit.tex
+++ b/diplomarbeit.tex
@@ -42,6 +42,15 @@
 % Listen etwas wenige einrücken, erfordert enumitem
 \setitemize{leftmargin=*}
 
+\makeatletter
+  \def\maxwidth{\ifdim\Gin@nat@width>\linewidth\linewidth\else\Gin@nat@width\fi}
+  \def\maxheight{\ifdim\Gin@nat@height>\textheight\textheight\else\Gin@nat@height\fi}
+\makeatother
+% Scale images if necessary, so that they will not overflow the page
+% margins by default, and it is still possible to overwrite the defaults
+% using explicit options in \includegraphics[width, height, ...]{}
+\setkeys{Gin}{width=\maxwidth,height=\maxheight,keepaspectratio}
+
 \usepackage{lmodern}
 
 \usepackage{xspace}
