added Kurzfassung Abstract and started Grid chapter

--- a/diplom.bib
+++ b/diplom.bib
@@ -113,3 +113,112 @@
 	urldate = {2018-02-11},
 	file = {DMX german:C\:\\Users\\cleme\\Zotero\\storage\\RRSTVAYJ\\dmxdu.html:text/html}
 }
+@misc{ubl_einfuhrung_nodate,
+	title = {Einführung zu {WebSockets}: {Sockets} im {Web} - {HTML}5 {Rocks}},
+	shorttitle = {Einführung zu {WebSockets}},
+	url = {https://www.html5rocks.com/de/tutorials/websockets/basics/},
+	abstract = {Erfahren Sie, wie Sie mithilfe von WebSockets eine bidirektionale Client-Server-Kommunikation mit niedriger Latenz zu Ihrer Web-App hinzufügen.},
+	urldate = {2017-12-08},
+	journal = {HTML5 Rocks - Eine Ressource für Open Web-HTML5-Entwickler},
+	author = {Ubl, Malte and Oktober 20th, Eiji Kitamura Veröffentlicht: and article, 2010 Comments: 2 Your browser may not support the functionality in this}
+}
+
+@misc{noauthor_grid_nodate,
+	title = {Grid by {Example} - {Usage} examples of {CSS} {Grid} {Layout}},
+	url = {https://gridbyexample.com/examples/},
+	urldate = {2017-12-08},
+	file = {Grid by Example - Usage examples of CSS Grid Layout:/Users/nuss/Zotero/storage/8XS7LEQS/examples.html:text/html}
+}
+
+@misc{emmanuel_how_2017,
+	title = {How to {Efficiently} {Master} the {CSS} {Grid} in a {Jiffy}},
+	url = {https://medium.com/flexbox-and-grids/how-to-efficiently-master-the-css-grid-in-a-jiffy-585d0c213577},
+	abstract = {Learn the 20\% you need for 80\% efficiency with CSS Grid.},
+	urldate = {2017-12-08},
+	journal = {Flexbox and Grid},
+	author = {Emmanuel, Ohans},
+	month = jul,
+	year = {2017},
+	file = {Snapshot:/Users/nuss/Zotero/storage/MQV4LA52/how-to-efficiently-master-the-css-grid-in-a-jiffy-585d0c213577.html:text/html}
+}
+
+@misc{noauthor_using_nodate,
+	title = {Using {CSS} flexible boxes},
+	url = {https://developer.mozilla.org/de/docs/Web/CSS/CSS_Flexible_Box_Layout/Using_CSS_flexible_boxes},
+	abstract = {Die CSS3 Flexible Box, auch flexbox genannt, ist ein Layoutmodus, um Elemente einer Seite so anzuordnen, dass sie sich vorhersagbar verhalten, wenn sich das Layout verschiedenen Bildschirmgrößen und Ausgabegeräten anpasst. Für viele Anwendungsfälle stellt das Flexible-Box-Modell eine Verbesserung gegenüber dem Block-Modell dar, da es keine Floats nutzt. Außerdem fallen die Margins eines Containers nicht mit den Margins seines Inhalts zusammen.},
+	language = {de},
+	urldate = {2018-02-11},
+	journal = {MDN-Web-Dokumentation},
+	file = {Snapshot:/Users/nuss/Zotero/storage/6BQIUWWU/Using_CSS_flexible_boxes.html:text/html}
+}
+
+@misc{noauthor_basic_nodate,
+	title = {Basic concepts of flexbox},
+	url = {https://developer.mozilla.org/en-US/docs/Web/CSS/CSS_Flexible_Box_Layout/Basic_Concepts_of_Flexbox},
+	abstract = {The Flexible Box Module, usually referred to as flexbox, was designed as a one-dimensional layout model, and as a method that could offer space distribution between items in an interface and powerful alignment capabilities. This article gives an outline of the main features of flexbox, which we will be exploring in more detail in the rest of these guides.},
+	language = {en-US},
+	urldate = {2018-02-11},
+	journal = {MDN Web Docs},
+	file = {Snapshot:/Users/nuss/Zotero/storage/7VU9GGP3/Basic_Concepts_of_Flexbox.html:text/html}
+}
+
+@misc{noauthor_layout_nodate,
+	title = {Layout with {Flexbox} · {React} {Native}},
+	url = {https://facebook.github.io/react-native/index.html},
+	abstract = {A component can specify the layout of its children using the flexbox algorithm. Flexbox is designed to provide a consistent layout on different screen sizes.},
+	urldate = {2018-02-11},
+	file = {Snapshot:/Users/nuss/Zotero/storage/4EC4U294/flexbox.html:text/html}
+}
+
+@misc{stojanov_visual_nodate,
+	title = {A {Visual} {Guide} to {CSS}3 {Flexbox} {Properties}},
+	url = {http://scotch.io/tutorials/a-visual-guide-to-css3-flexbox-properties},
+	abstract = {The Flexbox Layout officially called CSS Flexible Box Layout Module is new layout module in CSS3 made to improve the items align, directions and order in the container even when they are with dynamic or even unknown size. The prime},
+	language = {en},
+	urldate = {2018-02-11},
+	journal = {Scotch},
+	author = {Stojanov, Dimitar},
+	file = {Snapshot:/Users/nuss/Zotero/storage/SJ9RX9JQ/a-visual-guide-to-css3-flexbox-properties.html:text/html}
+}
+
+@misc{noauthor_flexbox_nodate,
+	title = {Flexbox {\textbar} {HTML} \& {CSS} {Is} {Hard}},
+	url = {/html-and-css/flexbox/},
+	abstract = {A friendly tutorial for modern CSS layouts},
+	language = {en},
+	urldate = {2018-02-11},
+	file = {Snapshot:/Users/nuss/Zotero/storage/RSXGKIME/flexbox.html:text/html}
+}
+
+@misc{noauthor_css_nodate,
+	title = {{CSS} {Flexible} {Box} {Layout} {Module} {Level} 1},
+	url = {https://www.w3.org/TR/css-flexbox-1/},
+	urldate = {2018-02-11},
+	file = {CSS Flexible Box Layout Module Level 1:/Users/nuss/Zotero/storage/FWW9CQ6A/css-flexbox-1.html:text/html}
+}
+
+@misc{noauthor_complete_nodate,
+	title = {A {Complete} {Guide} to {Flexbox}},
+	url = {https://css-tricks.com/snippets/css/a-guide-to-flexbox/},
+	abstract = {Our comprehensive guide to CSS flexbox layout. This complete guide explains everything about flexbox, focusing on all the differnet possible properties for the parent element (the flex container) and the child elements (the flex items). It also includes history, demos, patterns, and a browser support chart.},
+	language = {en},
+	urldate = {2018-02-11},
+	journal = {CSS-Tricks},
+	file = {Snapshot:/Users/nuss/Zotero/storage/GIEVAF4H/a-guide-to-flexbox.html:text/html}
+}
+
+@misc{noauthor_css_nodate-1,
+	title = {{CSS} {Flexible} {Box}},
+	url = {https://www.w3schools.com/css/css3_flexbox.asp},
+	urldate = {2018-02-11}
+}
+
+@misc{noauthor_complete_nodate-1,
+	title = {A {Complete} {Guide} to {Grid}},
+	url = {https://css-tricks.com/snippets/css/complete-guide-grid/},
+	abstract = {CSS Grid Layout is the most powerful layout system available in CSS. It is a 2-dimensional system, meaning it can handle both columns and rows, unlike flex},
+	language = {en},
+	urldate = {2018-02-12},
+	journal = {CSS-Tricks},
+	file = {Snapshot:/Users/nuss/Zotero/storage/U42MATJD/complete-guide-grid.html:text/html}
+}
