--- a/diplomarbeit.tex
+++ b/diplomarbeit.tex
@@ -43,8 +43,8 @@
 \setitemize{leftmargin=*}
 
 \makeatletter
-  \def\maxwidth{\ifdim\Gin@nat@width>\linewidth\linewidth\else\Gin@nat@width\fi}
-  \def\maxheight{\ifdim\Gin@nat@height>\textheight\textheight\else\Gin@nat@height\fi}
+    \def\maxwidth{\ifdim\Gin@nat@width>\linewidth\linewidth\else\Gin@nat@width\fi}
+    \def\maxheight{\ifdim\Gin@nat@height>\textheight\textheight\else\Gin@nat@height\fi}
 \makeatother
 % Scale images if necessary, so that they will not overflow the page
 % margins by default, and it is still possible to overwrite the defaults
@@ -237,11 +237,11 @@ Wien, \today
 \end{titlepage}%%%%%%%%%%%%%%%%%%%%% Ende Titelseite %%%%%%%%%%%%%%%%%%%%%%
 
 \chapter*{Kurzfassung}
-\input{text/00_kurzfassung.tex}
+\input{markdown/Dominik.md/Kurzfassung.md}
 
 \chapter*{Abstract}
 \selectlanguage{english}
-\input{text/00_abstract.tex}
+\input{markdown/Dominik.md/Abstract.md}
 \selectlanguage{naustrian}
 
 \chapter*{Ehrenwörtliche Erklärung}
@@ -431,6 +431,8 @@ Wien, \today
 \renewcommand{\kapitelautor}{Autor: Dominik Nußbaumer}
 
     \input{markdown/Dominik.md/Flexbox.md}
+
+    \input{markdown/Dominik.md/CSSGrid.md}{Autor: Dominik Nußbaumer}
 
 \section{jQuery}\label{jQuery}
 
