--- a/markdown/Dominik.md/Flexbox.md.tex
+++ b/markdown/Dominik.md/Flexbox.md.tex
@@ -42,12 +42,12 @@ Abbildung 1.
 
 \begin{figure}
 \centering
-\includegraphics[width=0.9\textwidth]{bilder/Dominik/Flexbox_Illustration_1.png}
+\includegraphics[width=0.9\textwidth,height=\textheight]{bilder/Dominik/Flexbox_Illustration_1.png}
 \caption{Flexbox Beispiel}
 \end{figure}
 
-Mithilfe von Flexbox ist dieses Verhalten einfach zu erzielen.\\
-Ich erstelle ein Elternelement mit folgenden Eigenschaften:
+Mithilfe von Flexbox ist dieses Verhalten einfach zu erzielen. Ich
+erstelle ein Elternelement mit folgenden Eigenschaften:
 
 \begin{Shaded}
 \begin{Highlighting}[]
@@ -120,3 +120,5 @@ Breite angepasst werden.
 \end{Highlighting}
 \end{Shaded}
 
+\hypertarget{muxf6glichkeiten}{%
+\subsubsection{Möglichkeiten}\label{muxf6glichkeiten}}
