--- a/markdown/diplomarbeit2.md.tex
+++ b/markdown/diplomarbeit2.md.tex
@@ -46,7 +46,7 @@ Man kann auch die Breite aber auch angeben.
 
 \begin{figure}
 \centering
-\includegraphics[width=12cm]{HTL3RLogo.png}
+\includegraphics[width=12cm,height=\textheight]{HTL3RLogo.png}
 \caption{Das kleinere Bild}
 \end{figure}
 
@@ -54,7 +54,7 @@ Oder ganz klein
 
 \begin{figure}
 \centering
-\includegraphics[width=2cm]{HTL3RLogo.png}
+\includegraphics[width=2cm,height=\textheight]{HTL3RLogo.png}
 \caption{Das ganz kleine Bild}
 \end{figure}
 
