weiter Kapitel hinzugefügt

--- a/diplomarbeit.tex
+++ b/diplomarbeit.tex
@@ -355,11 +355,13 @@ Wien, \today
 %%%%%%%%%%%%%%%%%%%%%% Chapter Betriebssystem %%%%%%%%%%%%%%%%%%%%%
 \chapter{Betriebssystem}\label{Betriebssystem}
 
+\input{markdown/Clemens.md/Betriebssysteme.md}
+
 \section{Raspbian}\label{Raspbian}
 
 \renewcommand{\kapitelautor}{Autor: Clemens Scharwitzl}
 
-% \input{markdown/Clemens.md/myChapter.md}
+\input{markdown/Clemens.md/Raspbian.md}
 
 \section{Sicherheit}\label{Sicherheit}
 
@@ -410,7 +412,7 @@ Wien, \today
 
 \renewcommand{\kapitelautor}{Autor: Clemens Scharwitzl}
 
-% \input{markdown/Clemens.md/myChapter.md}
+\input{markdown/Clemens.md/Ir.md}
 
 \section{Mischpult}\label{Mischpult}
 
@@ -504,7 +506,7 @@ Zusätzlich sollte es geben:
 
 %% Flattersatz -- damit werden die langen URLs besser umgebrochen
 \raggedright %% eventuell auskommentieren
-\bibliographystyle{plaindin}%Alternative unsrtdin - Nummern im Text aufsteigend
+\bibliographystyle{alphaurl}%Alternative unsrtdin - Nummern im Text aufsteigend
 \bibliography{diplom}
 
 
