weiter Kapitel hinzugefügt

--- a/diplom.bib
+++ b/diplom.bib
@@ -293,6 +293,31 @@
 	year = {1991},
 	note = {OCLC: 257736382}
 }
+
+@book{schmidt_raspberry_2014,
+	address = {Heidelberg},
+	edition = {2., aktualisierte und erw. Aufl},
+	series = {C't {Hardware} {Hacks} {Edition}},
+	title = {Raspberry {Pi}: {Einstieg} - {Optimierung} - {Projekte}},
+	isbn = {978-3-86490-134-8 978-1-937785-80-2 978-3-86491-476-8 978-3-86491-477-5},
+	shorttitle = {Raspberry {Pi}},
+	abstract = {Der Einplatinencomputer wurde bereits über 2,5 Mio-mal verkauft und ist noch vor den Arduino-Platinen das wichtigste Gerät zum experimentellen Erkunden der Computerwelt. Gedacht für erste Programmiererfahrungen für Jugendliche, tun viele fertig konfigurierte Geräte ihren Dienst um Fernseher internetfähig zu machen. Entsprechend viele Bücher sind auf dem Markt und die Erstauflage dieses Buchs ist erst gut ein Jahr alt (ID-A 21/13). Die Änderungen sind entsprechend gering. Das Thema "Coder" und die Installation mit NOOBS ist neu aufgenommen worden, beim Anpassen und konfigurieren wurden neue Unterabschnitte hinzugefügt. Neu ist der Abschnitt zur Steuerung der Pi-Kamera und so wächst das Buch insgesamt um knapp 20 Seiten. Ein Buch zum Raspberry Pi gehört bereits in den Grundbestand, die Vorauflage kann weiterlaufen, in SZ ein Ausleihrenner. Neben "Raspberry Pi für Dummies" (ID-A 17/14) und "Raspberry Pi" von Eben Upton (ID-A 10/13), jedoch vor "Raspberry Pi für Einsteiger" von Matt Richardson (ID-B 32/13). (1)},
+	language = {ger},
+	publisher = {dpunkt.verl},
+	author = {Schmidt, Maik},
+	year = {2014},
+	note = {OCLC: 876883730}
+}
+
+@misc{noauthor_download_nodate,
+	title = {Download {Raspbian} for {Raspberry} {Pi}},
+	url = {https://www.raspberrypi.org/downloads/raspbian/},
+	abstract = {Raspbian is the Foundation's official supported operating system. You can install it with NOOBS or download the image below.},
+	language = {en-GB},
+	urldate = {2018-03-11},
+	journal = {Raspberry Pi},
+	file = {Snapshot:C\:\\Users\\cleme\\Zotero\\storage\\G8WCCWCM\\raspbian.html:text/html}
+}
 @misc{ubl_einfuhrung_nodate,
 	title = {Einführung zu {WebSockets}: {Sockets} im {Web} - {HTML}5 {Rocks}},
 	shorttitle = {Einführung zu {WebSockets}},
