--- a/diplomarbeit.tex
+++ b/diplomarbeit.tex
@@ -25,6 +25,7 @@
 
 \setcounter{secnumdepth}{3}
 
+\usepackage{dirtree}
 \usepackage{textcomp}
 
 \usepackage[T1]{fontenc}
@@ -362,6 +363,12 @@ Wien, \today
 \renewcommand{\kapitelautor}{Autor: Clemens Scharwitzl}
 
 \input{markdown/Clemens.md/Raspbian.md}
+
+\section{Webserver}\label{Webserver}
+
+\renewcommand{\kapitelautor}{Autor: Clemens Scharwitzl}
+
+\input{markdown/Clemens.md/Webserver.md}
 
 \section{Sicherheit}\label{Sicherheit}
 
