Flexbox improvements Grid+Flex und Grid

--- a/diplomarbeit.tex
+++ b/diplomarbeit.tex
@@ -440,9 +440,11 @@ Wien, \today
 
 \renewcommand{\kapitelautor}{Autor: Dominik Nußbaumer}
 
-    \input{markdown/Dominik.md/Flexbox.md}
+    \input{markdown/Dominik.md/Flexbox.md}{Autor: Dominik Nußbaumer}
 
     \input{markdown/Dominik.md/CSSGrid.md}{Autor: Dominik Nußbaumer}
+
+    \input{markdown/Dominik.md/Grid_vs_Flexbox.md}{Autor: Dominik Nußbaumer}
 
 \section{jQuery}\label{jQuery}
 
