worked on some chapters

--- a/diplomarbeit.tex
+++ b/diplomarbeit.tex
@@ -154,7 +154,7 @@
  bookmarks=true,bookmarksnumbered=false,bookmarksopen=false,
  breaklinks=true,pdfborder={0 0 0},backref=false,colorlinks=false]
  {hyperref}
-\hypersetup{pdftitle={Diplomarbeit Titel},
+\hypersetup{pdftitle={Mediatrix},
  pdfauthor={Wer auch immer},
  pdfsubject={Diplomarbeit},
  pdfkeywords={dies, das}}
