added chapters to diplomarbeit.tex file

--- a/diplomarbeit.tex
+++ b/diplomarbeit.tex
@@ -204,10 +204,10 @@ A-1030 Wien :: Tel +43 1 24215-10 :: Fax DW 18
 
 
 \begin{center}
-\textbf{\LARGE{}Diplomarbeit}{\large{}}\\
+\textbf{\LARGE{Diplomarbeit}}{\large{}}\\
 {\large{}\vspace{15mm}
- }\textbf{\large{}Mediatrix}\\
-\textbf{\large{}Ausgeschriebener Titel der Diplomarbeit}\\
+ }\textbf{\large{Mediatrix}}\\
+\textbf{\large{Ausgeschriebener Titel der Diplomarbeit}}\\
  \vspace{15mm}
  ausgeführt an der\\
  Höheren Abteilung für Informationstechnologie/Medientechnik\\
@@ -446,7 +446,11 @@ Wien, \today
 
     \input{markdown/Dominik.md/Grid_vs_Flexbox.md}{Autor: Dominik Nußbaumer}
 
+    \input{markdown/Dominik.md/normalize.md}{Autor: Dominik Nußbaumer}
+
 \section{jQuery}\label{jQuery}
+
+    \input{markdown/Dominik.md/jQuery.md}{Autor: Dominik Nußbaumer}
 
 \renewcommand{\kapitelautor}{Autor: Dominik Nußbaumer}
 
