added files to diplomarbeit.tex

--- a/diplomarbeit.tex
+++ b/diplomarbeit.tex
@@ -305,7 +305,7 @@ Wien, \today
 
 % \input{markdown/Clemens.md/myChapter.md}
 
-\section{Ein- und Ausschlatversögerung}\label{Ein-und-Ausschlatversögerung}
+\section{Ein- und Ausschlatverzögerung}\label{Ein-und-Ausschlatversögerung}
 
 \renewcommand{\kapitelautor}{Autor: Clemens Scharwitzl}
 
@@ -451,6 +451,26 @@ Wien, \today
 \section{jQuery}\label{jQuery}
 
     \input{markdown/Dominik.md/jQuery.md}{Autor: Dominik Nußbaumer}
+
+\section{SASS}\label{SASS}
+
+    \input{markdown/Dominik.md/SASS.md}{Autor: Dominik Nußbaumer}
+
+\section{CSS Variablen}\label{CSS Variablen}
+
+    \input{markdown/Dominik.md/CSS_Variablen.md}{Autor: Dominik Nußbaumer}
+
+\section{anpassungsfähiges Design}\label{anpassungsfähiges Design}
+
+    \input{markdown/Dominik.md/responsive_design.md}{Autor: Dominik Nußbaumer}
+
+\section{Design}\label{Design}
+
+    \input{markdown/Dominik.md/Produktwebsite.md}{Autor: Dominik Nußbaumer}
+
+    \input{markdown/Dominik.md/Dashboard.md}{Autor: Dominik Nußbaumer}
+
+    \input{markdown/Dominik.md/UX_Fokus_auf_technisch_unversierte_Benutzer.md}{Autor: Dominik Nußbaumer}
 
 \renewcommand{\kapitelautor}{Autor: Dominik Nußbaumer}
 
