--- a/bib/Dominik.bib
+++ b/bib/Dominik.bib
@@ -1,5 +1,5 @@
 
-@online{ubl_einfuhrung_????,
+@online{einfuhrung_websockets,
 	title = {Einführung zu {WebSockets}: Sockets im Web - {HTML}5 Rocks},
 	url = {https://www.html5rocks.com/de/tutorials/websockets/basics/},
 	shorttitle = {Einführung zu {WebSockets}},
@@ -9,13 +9,13 @@
 	urldate = {2017-12-08}
 }
 
-@online{_grid_????,
+@online{_grid_by_example
 	title = {Grid by Example - Usage examples of {CSS} Grid Layout},
 	url = {https://gridbyexample.com/examples/},
 	urldate = {2017-12-08}
 }
 
-@online{emmanuel_how_2017,
+@online{emmanuel_how_grid,
 	title = {How to Efficiently Master the {CSS} Grid in a Jiffy},
 	url = {https://medium.com/flexbox-and-grids/how-to-efficiently-master-the-css-grid-in-a-jiffy-585d0c213577},
 	abstract = {Learn the 20\% you need for 80\% efficiency with {CSS} Grid.},
@@ -25,7 +25,7 @@
 	date = {2017-07-07}
 }
 
-@online{_using_????,
+@online{_using_flexbox
 	title = {Using {CSS} flexible boxes},
 	url = {https://developer.mozilla.org/de/docs/Web/CSS/CSS_Flexible_Box_Layout/Using_CSS_flexible_boxes},
 	abstract = {Die {CSS}3 Flexible Box, auch flexbox genannt, ist ein Layoutmodus, um Elemente einer Seite so anzuordnen, dass sie sich vorhersagbar verhalten, wenn sich das Layout verschiedenen Bildschirmgrößen und Ausgabegeräten anpasst. Für viele Anwendungsfälle stellt das Flexible-Box-Modell eine Verbesserung gegenüber dem Block-Modell dar, da es keine Floats nutzt. Außerdem fallen die Margins eines Containers nicht mit den Margins seines Inhalts zusammen.},
@@ -34,7 +34,7 @@
 	langid = {german}
 }
 
-@online{_basic_????,
+@online{basic_concepts_flexbox
 	title = {Basic concepts of flexbox},
 	url = {https://developer.mozilla.org/en-US/docs/Web/CSS/CSS_Flexible_Box_Layout/Basic_Concepts_of_Flexbox},
 	abstract = {The Flexible Box Module, usually referred to as flexbox, was designed as a one-dimensional layout model, and as a method that could offer space distribution between items in an interface and powerful alignment capabilities. This article gives an outline of the main features of flexbox, which we will be exploring in more detail in the rest of these guides.},
@@ -43,14 +43,14 @@
 	langid = {american}
 }
 
-@online{_layout_????,
+@online{_layout_with_flexbox
 	title = {Layout with Flexbox · React Native},
 	url = {https://facebook.github.io/react-native/index.html},
 	abstract = {A component can specify the layout of its children using the flexbox algorithm. Flexbox is designed to provide a consistent layout on different screen sizes.},
 	urldate = {2018-02-11}
 }
 
-@online{stojanov_visual_????,
+@online{stojanov_visual_guide_flexbox
 	title = {A Visual Guide to {CSS}3 Flexbox Properties},
 	url = {http://scotch.io/tutorials/a-visual-guide-to-css3-flexbox-properties},
 	abstract = {The Flexbox Layout officially called {CSS} Flexible Box Layout Module is new layout module in {CSS}3 made to improve the items align, directions and order in the container even when they are with dynamic or even unknown size. The prime},
@@ -60,7 +60,7 @@
 	langid = {english}
 }
 
-@online{_flexbox_????,
+@online{_flexbox_is_hard
 	title = {Flexbox {\textbar} {HTML} \& {CSS} Is Hard},
 	url = {/html-and-css/flexbox/},
 	abstract = {A friendly tutorial for modern {CSS} layouts},
@@ -68,13 +68,13 @@
 	langid = {english}
 }
 
-@online{_css_????,
+@online{flexbox_official
 	title = {{CSS} Flexible Box Layout Module Level 1},
 	url = {https://www.w3.org/TR/css-flexbox-1/},
 	urldate = {2018-02-11}
 }
 
-@online{_complete_????,
+@online{complete_guide_flexbox
 	title = {A Complete Guide to Flexbox},
 	url = {https://css-tricks.com/snippets/css/a-guide-to-flexbox/},
 	abstract = {Our comprehensive guide to {CSS} flexbox layout. This complete guide explains everything about flexbox, focusing on all the differnet possible properties for the parent element (the flex container) and the child elements (the flex items). It also includes history, demos, patterns, and a browser support chart.},
@@ -83,7 +83,7 @@
 	langid = {english}
 }
 
-@online{_css_????-1,
+@online{css_grid,
 	title = {{CSS} Grid Layout},
 	url = {https://developer.mozilla.org/en-US/docs/Web/CSS/CSS_Grid_Layout},
 	abstract = {{CSS} Grid Layout excels at dividing a page into major regions, or defining the relationship in terms of size, position, and layer, between parts of a control built from {HTML} primitives.},
@@ -92,40 +92,25 @@
 	langid = {american}
 }
 
-@online{_grid_????-1,
-	title = {grid},
-	url = {https://developer.mozilla.org/en-US/docs/Web/CSS/grid},
-	abstract = {The grid {CSS} property is a shorthand property that sets all of the explicit grid properties (grid-template-rows, grid-template-columns, and grid-template-areas), and all the implicit grid properties (grid-auto-rows, grid-auto-columns, and grid-auto-flow), in a single declaration.},
-	titleaddon = {{MDN} Web Docs},
-	urldate = {2018-03-04},
-	langid = {american}
-}
-
-@online{_css_????-2,
+@online{_css_variables,
 	title = {{CSS} Custom Properties for Cascading Variables Module Level 1},
 	url = {https://www.w3.org/TR/css-variables-1/},
 	urldate = {2018-03-07}
 }
 
-@online{_browser_????,
-	title = {Browser Support for {CSS} Grid Layout},
-	url = {https://gridbyexample.com/browsers/},
-	urldate = {2018-03-10}
-}
-
-@online{_css_????-3,
+@online{css_grid_layout_official,
 	title = {{CSS} Grid Layout Module Level 1},
 	url = {https://www.w3.org/TR/css-grid/},
 	urldate = {2018-03-10}
 }
 
-@online{_complete_????-1,
+@online{complete_guide_grid,
 	title = {A Complete Guide to Grid {\textbar} {CSS}-Tricks},
 	url = {https://css-tricks.com/snippets/css/complete-guide-grid/},
 	urldate = {2018-03-10}
 }
 
-@online{_can_????,
+@online{browser_support_grid
 	title = {Can I use... Support tables for {HTML}5, {CSS}3, etc},
 	url = {https://caniuse.com/#search=grid},
 	urldate = {2018-03-10}
