weiter Kapitel hinzugefügt

--- a/bib/Clemens.bib
+++ b/bib/Clemens.bib
@@ -378,3 +378,31 @@
 	urldate = {2018-03-26},
 	file = {Uncomplicated Firewall (ufw) - Debian Wiki:C\:\\Users\\cleme\\Zotero\\storage\\GYJ6P63K\\Uncomplicated Firewall (ufw).html:text/html}
 }
+
+@misc{noauthor_open_nodate,
+	title = {Open {Lighting} {Project} {\textbar} {Open} {Source} {Lighting} {Control} {Software}},
+	url = {https://www.openlighting.org/},
+	urldate = {2018-03-26},
+	file = {Open Lighting Project | Open Source Lighting Control Software:C\:\\Users\\cleme\\Zotero\\storage\\8FWU2M8U\\www.openlighting.org.html:text/html}
+}
+
+@misc{noauthor_open_nodate-1,
+	title = {Open {Lighting} {Project} {\textbar} {Open} {Source} {Lighting} {Control} {Software}},
+	url = {https://www.openlighting.org/},
+	urldate = {2018-03-26},
+	file = {Open Lighting Project | Open Source Lighting Control Software:C\:\\Users\\cleme\\Zotero\\storage\\5MDYPA7X\\www.openlighting.org.html:text/html}
+}
+
+@misc{noauthor_open_nodate-2,
+	title = {Open {Lighting} {Project} {\textbar} {Open} {Source} {Lighting} {Control} {Software}},
+	url = {https://www.openlighting.org/},
+	urldate = {2018-03-26},
+	file = {Open Lighting Project | Open Source Lighting Control Software:C\:\\Users\\cleme\\Zotero\\storage\\PR9SDFFU\\www.openlighting.org.html:text/html}
+}
+
+@misc{noauthor_open_nodate-3,
+	title = {Open {Lighting} {Architecture}: {Open} {Lighting} {Architecture} {Developer} {Documentation}},
+	url = {http://docs.openlighting.org/ola/doc/latest/},
+	urldate = {2018-03-29},
+	file = {Open Lighting Architecture\: Open Lighting Architecture Developer Documentation:C\:\\Users\\cleme\\Zotero\\storage\\6MDD78MV\\latest.html:text/html}
+}
