--- a/diplom.bib
+++ b/diplom.bib
@@ -318,6 +318,87 @@
 	journal = {Raspberry Pi},
 	file = {Snapshot:C\:\\Users\\cleme\\Zotero\\storage\\G8WCCWCM\\raspbian.html:text/html}
 }
+
+@misc{noauthor_rc5_nodate-1,
+	title = {{RC}5 - {Code} der {Fernbedienung}},
+	url = {https://www.opendcc.de/info/rc5/rc5.html},
+	urldate = {2018-03-11},
+	file = {RC5 - Code der Fernbedienung:C\:\\Users\\cleme\\Zotero\\storage\\EFGJFMG8\\rc5.html:text/html}
+}
+
+@misc{noauthor_elektronik:_nodate,
+	title = {Elektronik: {IR}-{Fernbedienung}, {RC}-5},
+	url = {http://www.sprut.de/electronic/ir/rc5.htm},
+	urldate = {2018-03-17},
+	file = {Elektronik\: IR-Fernbedienung, RC-5:C\:\\Users\\cleme\\Zotero\\storage\\VGQHEJMX\\rc5.html:text/html}
+}
+
+@misc{noauthor_was_nodate,
+	title = {Was ist {Proxy}-{Server}? - {Definition} von {WhatIs}.com},
+	shorttitle = {Was ist {Proxy}-{Server}?},
+	url = {http://www.searchnetworking.de/definition/Proxy-Server},
+	abstract = {Proxy-Server kommen in vielfältigen Szenarien zum Einsatz. Aber wie funktioniert ein Proxy-Server eigentlich?},
+	language = {de},
+	urldate = {2018-03-18},
+	journal = {SearchNetworking.de},
+	file = {Snapshot:C\:\\Users\\cleme\\Zotero\\storage\\YCAXKPD7\\Proxy-Server.html:text/html}
+}
+
+@misc{noauthor_mod_ssl_nodate,
+	title = {mod\_ssl - {Apache} {HTTP} {Server} {Version} 2.4},
+	url = {https://httpd.apache.org/docs/2.4/mod/mod_ssl.html},
+	urldate = {2018-03-18},
+	file = {mod_ssl - Apache HTTP Server Version 2.4:C\:\\Users\\cleme\\Zotero\\storage\\Y54VUV7H\\mod_ssl.html:text/html}
+}
+
+@misc{noauthor_mod_proxy_nodate,
+	title = {mod\_proxy - {Apache} {HTTP} {Server} {Version} 2.4},
+	url = {https://httpd.apache.org/docs/2.4/de/mod/mod_proxy.html},
+	urldate = {2018-03-18},
+	file = {mod_proxy - Apache HTTP Server Version 2.4:C\:\\Users\\cleme\\Zotero\\storage\\TGF3B839\\mod_proxy.html:text/html}
+}
+
+@misc{noauthor_mod_proxy_wstunnel_nodate,
+	title = {mod\_proxy\_wstunnel - {Apache} {HTTP} {Server} {Version} 2.4},
+	url = {https://httpd.apache.org/docs/2.4/de/mod/mod_proxy_wstunnel.html},
+	urldate = {2018-03-18},
+	file = {mod_proxy_wstunnel - Apache HTTP Server Version 2.4:C\:\\Users\\cleme\\Zotero\\storage\\ZXG5RH8C\\mod_proxy_wstunnel.html:text/html}
+}
+
+@misc{noauthor_mod_rewrite_nodate,
+	title = {mod\_rewrite - {Apache} {HTTP} {Server} {Version} 2.4},
+	url = {http://httpd.apache.org/docs/current/mod/mod_rewrite.html},
+	urldate = {2018-03-18},
+	file = {mod_rewrite - Apache HTTP Server Version 2.4:C\:\\Users\\cleme\\Zotero\\storage\\MCXSM8ER\\mod_rewrite.html:text/html}
+}
+
+@misc{noauthor_uncomplicated_nodate,
+	title = {Uncomplicated {Firewall} (ufw) - {Debian} {Wiki}},
+	url = {https://wiki.debian.org/Uncomplicated%20Firewall%20%28ufw%29},
+	urldate = {2018-03-26},
+	file = {Uncomplicated Firewall (ufw) - Debian Wiki:C\:\\Users\\cleme\\Zotero\\storage\\GYJ6P63K\\Uncomplicated Firewall (ufw).html:text/html}
+}
+
+@misc{noauthor_open_nodate,
+	title = {Open {Lighting} {Project} {\textbar} {Open} {Source} {Lighting} {Control} {Software}},
+	url = {https://www.openlighting.org/},
+	urldate = {2018-03-26},
+	file = {Open Lighting Project | Open Source Lighting Control Software:C\:\\Users\\cleme\\Zotero\\storage\\8FWU2M8U\\www.openlighting.org.html:text/html}
+}
+
+@misc{noauthor_open_nodate-1,
+	title = {Open {Lighting} {Project} {\textbar} {Open} {Source} {Lighting} {Control} {Software}},
+	url = {https://www.openlighting.org/},
+	urldate = {2018-03-26},
+	file = {Open Lighting Project | Open Source Lighting Control Software:C\:\\Users\\cleme\\Zotero\\storage\\5MDYPA7X\\www.openlighting.org.html:text/html}
+}
+
+@misc{noauthor_open_nodate-2,
+	title = {Open {Lighting} {Project} {\textbar} {Open} {Source} {Lighting} {Control} {Software}},
+	url = {https://www.openlighting.org/},
+	urldate = {2018-03-26},
+	file = {Open Lighting Project | Open Source Lighting Control Software:C\:\\Users\\cleme\\Zotero\\storage\\PR9SDFFU\\www.openlighting.org.html:text/html}
+}
 @online{websockets-einfuehrung,
 	title = {Einführung zu {WebSockets}: Sockets im Web - {HTML}5 Rocks},
 	url = {https://www.html5rocks.com/de/tutorials/websockets/basics/},
