--- a/diplomarbeit.tex
+++ b/diplomarbeit.tex
@@ -376,17 +376,17 @@ Wien, \today
 
 \input{markdown/Clemens.md/Sicherheit.md}
 
-\section{Ola}\label{ola}
+\section{OLA}\label{ola}
 
 \renewcommand{\kapitelautor}{Autor: Clemens Scharwitzl}
 
-% \input{markdown/Clemens.md/myChapter.md}
+\input{markdown/Clemens.md/ola.md}
 
 \section{WiringPi}\label{WiringPi}
 
 \renewcommand{\kapitelautor}{Autor: Clemens Scharwitzl}
 
-% \input{markdown/Clemens.md/myChapter.md}
+\input{markdown/Clemens.md/wiringPi.md}
 
 %%%%%%%%%%%%%%%%%%%%%% Chapter Backend %%%%%%%%%%%%%%%%%%%%%
 \chapter{Backend}\label{Backend}
