kleine Verbesserungen + Bilder hinzugefügt

--- a/diplom.bib
+++ b/diplom.bib
@@ -416,7 +416,7 @@
 	urldate = {2017-12-08}
 }
 
-@online{_grid_by_example
+@online{_grid_by_example,
 	title = {Grid by Example - Usage examples of {CSS} Grid Layout},
 	url = {https://gridbyexample.com/examples/},
 	urldate = {2017-12-08}
@@ -432,7 +432,7 @@
 	date = {2017-07-07}
 }
 
-@online{_using_flexbox
+@online{_using_flexbox,
 	title = {Using {CSS} flexible boxes},
 	url = {https://developer.mozilla.org/de/docs/Web/CSS/CSS_Flexible_Box_Layout/Using_CSS_flexible_boxes},
 	abstract = {Die {CSS}3 Flexible Box, auch flexbox genannt, ist ein Layoutmodus, um Elemente einer Seite so anzuordnen, dass sie sich vorhersagbar verhalten, wenn sich das Layout verschiedenen Bildschirmgrößen und Ausgabegeräten anpasst. Für viele Anwendungsfälle stellt das Flexible-Box-Modell eine Verbesserung gegenüber dem Block-Modell dar, da es keine Floats nutzt. Außerdem fallen die Margins eines Containers nicht mit den Margins seines Inhalts zusammen.},
@@ -441,7 +441,7 @@
 	langid = {german}
 }
 
-@online{basic_concepts_flexbox
+@online{basic_concepts_flexbox,
 	title = {Basic concepts of flexbox},
 	url = {https://developer.mozilla.org/en-US/docs/Web/CSS/CSS_Flexible_Box_Layout/Basic_Concepts_of_Flexbox},
 	abstract = {The Flexible Box Module, usually referred to as flexbox, was designed as a one-dimensional layout model, and as a method that could offer space distribution between items in an interface and powerful alignment capabilities. This article gives an outline of the main features of flexbox, which we will be exploring in more detail in the rest of these guides.},
@@ -450,14 +450,14 @@
 	langid = {american}
 }
 
-@online{_layout_with_flexbox
+@online{_layout_with_flexbox,
 	title = {Layout with Flexbox · React Native},
 	url = {https://facebook.github.io/react-native/index.html},
 	abstract = {A component can specify the layout of its children using the flexbox algorithm. Flexbox is designed to provide a consistent layout on different screen sizes.},
 	urldate = {2018-02-11}
 }
 
-@online{stojanov_visual_guide_flexbox
+@online{stojanov_visual_guide_flexbox,
 	title = {A Visual Guide to {CSS}3 Flexbox Properties},
 	url = {http://scotch.io/tutorials/a-visual-guide-to-css3-flexbox-properties},
 	abstract = {The Flexbox Layout officially called {CSS} Flexible Box Layout Module is new layout module in {CSS}3 made to improve the items align, directions and order in the container even when they are with dynamic or even unknown size. The prime},
@@ -467,7 +467,7 @@
 	langid = {english}
 }
 
-@online{_flexbox_is_hard
+@online{_flexbox_is_hard,
 	title = {Flexbox {\textbar} {HTML} \& {CSS} Is Hard},
 	url = {/html-and-css/flexbox/},
 	abstract = {A friendly tutorial for modern {CSS} layouts},
@@ -475,13 +475,13 @@
 	langid = {english}
 }
 
-@online{flexbox_official
+@online{flexbox_official,
 	title = {{CSS} Flexible Box Layout Module Level 1},
 	url = {https://www.w3.org/TR/css-flexbox-1/},
 	urldate = {2018-02-11}
 }
 
-@online{complete_guide_flexbox
+@online{complete_guide_flexbox,
 	title = {A Complete Guide to Flexbox},
 	url = {https://css-tricks.com/snippets/css/a-guide-to-flexbox/},
 	abstract = {Our comprehensive guide to {CSS} flexbox layout. This complete guide explains everything about flexbox, focusing on all the differnet possible properties for the parent element (the flex container) and the child elements (the flex items). It also includes history, demos, patterns, and a browser support chart.},
@@ -517,19 +517,19 @@
 	urldate = {2018-03-10}
 }
 
-@online{browser_support_grid
+@online{browser_support_grid,
 	title = {Can I use... Support tables for {HTML}5, {CSS}3, etc},
 	url = {https://caniuse.com/#search=grid},
 	urldate = {2018-03-10}
 }
 
-@online{_difference_????,
+@online{_difference_width_flex-basis,
 	title = {The Difference Between Width and Flex Basis},
 	url = {http://gedd.ski/post/the-difference-between-width-and-flex-basis/},
 	urldate = {2018-03-10}
 }
 
-@online{_does_2017,
+@online{does_grid_replace_flexbox,
 	title = {Does {CSS} Grid Replace Flexbox?},
 	url = {https://css-tricks.com/css-grid-replace-flexbox/},
 	abstract = {No. Well. Mostly No. Grid is much newer than Flexbox and has a bit less browser support. That's why it makes perfect sense if people are wondering if {CSS} grid is here to replace Flexbox. To put a point on it: Grid can do things Flexbox can't do. Flexbox can do things Grid can't do. They can work together: a grid item},
@@ -539,7 +539,7 @@
 	langid = {english}
 }
 
-@online{_how_2017,
+@online{minmax_grid,
 	title = {How the minmax() Function Works},
 	url = {https://bitsofco.de},
 	abstract = {One incredibly useful new feature introduced with the {CSS} Grid Layout Specification is the minmax() function. This function opens the door to us being able to write much more powerful and succinct {CSS} by allowing us to set, as a value for a grid track, a function including both a},
@@ -549,7 +549,7 @@
 	langid = {english}
 }
 
-@online{_flexbox_????-1,
+@online{_flexbox_practical_Example,
 	title = {Flexbox vs {CSS} Grid: A Practical Example • Silo Creativo},
 	url = {https://www.silocreativo.com/en/flexbox-vs-css-grid-practical-example/},
 	urldate = {2018-03-18}
@@ -566,7 +566,7 @@
 	date = {2017-12-10}
 }
 
-@book{sharkie_jump_2017,
+@book{responsive_web_design,
 	title = {Jump start responsive web design},
 	url = {http://proquest.safaribooksonline.com/?fpi=9781492020615},
 	author = {Sharkie, Craig},
@@ -575,7 +575,7 @@
 	note = {{OCLC}: 987006602}
 }
 
-@online{jquery.org_jquery_????,
+@online{jquery.org,
 	title = {{jQuery}},
 	url = {https://jquery.com/},
 	abstract = {{jQuery}: The Write Less, Do More, {JavaScript} Library},
@@ -584,11 +584,17 @@
 	langid = {american}
 }
 
-@online{nicolas_about_????,
+@online{about_normalize,
 	title = {About normalize.css – Nicolas Gallagher},
 	url = {http://nicolasgallagher.com/about-normalize-css/},
 	abstract = {A small {CSS} library to make browser defaults more consistent},
 	author = {Nicolas, Gallagher},
 	urldate = {2018-03-25},
 	langid = {english}
+}
+
+@online{SASS_REFERENCE,
+	title = {File: {SASS}\_REFERENCE — Documentation by {YARD} 0.9.12},
+	url = {https://sass-lang.com/documentation/file.SASS_REFERENCE.html},
+	urldate = {2018-03-26}
 }
