Weitere Kapitel hinzugefügt

--- a/bib/Clemens.bib
+++ b/bib/Clemens.bib
@@ -406,3 +406,12 @@
 	urldate = {2018-03-29},
 	file = {Open Lighting Architecture\: Open Lighting Architecture Developer Documentation:C\:\\Users\\cleme\\Zotero\\storage\\6MDD78MV\\latest.html:text/html}
 }
+
+@misc{noauthor_wiringpi_nodate,
+	title = {{WiringPi}},
+	url = {http://wiringpi.com/},
+	abstract = {GPIO Library for the Raspberry Pi},
+	language = {en-US},
+	urldate = {2018-03-30},
+	file = {Snapshot:C\:\\Users\\cleme\\Zotero\\storage\\NBJEXY66\\wiringpi.com.html:text/html}
+}
