--- a/diplomarbeit.tex
+++ b/diplomarbeit.tex
@@ -396,7 +396,7 @@ Wien, \today
 
 \renewcommand{\kapitelautor}{Autor: Clemens Scharwitzl}
 
-% \input{markdown/Clemens.md/myChapter.md}
+\input{markdown/Clemens.md/extension.md}
 
 \section{Websocket}\label{Websocket}
 
@@ -429,6 +429,12 @@ Wien, \today
 % \input{markdown/Clemens.md/myChapter.md}
 
 \section{SQLite}\label{SQLite}
+
+\renewcommand{\kapitelautor}{Autor: Clemens Scharwitzl}
+
+% \input{markdown/Clemens.md/myChapter.md}
+
+\section{Schnittstelle}\label{Schnittstelle}
 
 \renewcommand{\kapitelautor}{Autor: Clemens Scharwitzl}
 
