--- a/diplomarbeit.tex
+++ b/diplomarbeit.tex
@@ -467,7 +467,7 @@ Wien, \today
 
     \input{markdown/Dominik.md/CSS_Variablen.md}{Autor: Dominik Nußbaumer}
 
-\section{anpassungsfähiges Design}\label{anpassungsfähiges Design}
+\section{Anpassungsfähiges Design}\label{Anpassungsfähiges Design}
 
     \input{markdown/Dominik.md/responsive_design.md}{Autor: Dominik Nußbaumer}
 
