--- a/__latexindent_temp.tex
+++ b/__latexindent_temp.tex
@@ -463,7 +463,7 @@ Wien, \today
 
     \input{markdown/Dominik.md/SASS.md}{Autor: Dominik Nußbaumer}
 
-\section{CSS Variablen}\label{CSS Variablen}
+\section{CSS-Variablen}\label{CSS-Variablen}
 
     \input{markdown/Dominik.md/CSS_Variablen.md}{Autor: Dominik Nußbaumer}
 
