added more chaoters

--- a/bib/Dominik.bib
+++ b/bib/Dominik.bib
@@ -133,6 +133,15 @@
 	urldate = {2018-03-10}
 }
 
+@online{browser_support_flex,
+	title = {Can I use... Support tables for {HTML}5, {CSS}3, etc},
+	url = {https://caniuse.com/#search=flexbox},
+	shorttitle = {browser\_support\_flexbox},
+	author = {{CanIuse}},
+	urldate = {2018-03-10}
+}
+
+
 @online{css-tricks_does_2017,
 	title = {Does {CSS} Grid Replace Flexbox?},
 	url = {https://css-tricks.com/css-grid-replace-flexbox/},
@@ -225,9 +234,33 @@ Im Bereich des {CAD}-Entwurfs, des {CAM} sowie der Finite-Elemente-Simulation wi
 	langid = {english}
 }
 
-@online{websockets_official,
+@online{websocket_official,
 	title = {Websockets Official},
 	url = {https://www.w3.org/TR/websockets/},
 	shorttitle = {websockets\_official},
 	author = {{W3C}}
+}
+
+@online{browser_support_variables,
+	title = {Browser Support von CSS-Variablen},
+	url = {https://caniuse.com/#search=custom%20properties},
+	shorttitle = {browser\_support\_variables},
+	author = {{CanIuse}},
+	urldate = {2018-03-20}
+}
+
+@online{websocket_events,
+	title = {Websocket Events und Actions},
+	url = {https://www.tutorialspoint.com/websockets/websockets_events_actions.htm},
+	shorttitle = {websocket\_events},
+	author = {{tutorialspoint}},
+	urldate = {2018-03-20}
+}
+
+@online{websocket_spec,
+	title = {Websocket Official Spec},
+	url = {https://html.spec.whatwg.org/multipage/web-sockets.html#network},
+	shorttitle = {websocket\_spec},
+	author = {{whatwg}},
+	urldate = {2018-03-20}
 }
