weitere Kapitel hinzugefügt

--- a/bib/Clemens.bib
+++ b/bib/Clemens.bib
@@ -424,3 +424,10 @@
 	urldate = {2018-04-01},
 	file = {Snapshot:C\:\\Users\\cleme\\Zotero\\storage\\PVPT89J9\\www.php-cpp.com.html:text/html}
 }
+
+@misc{noauthor_ratchet_nodate,
+	title = {Ratchet - {PHP} {WebSockets}},
+	url = {http://socketo.me/},
+	urldate = {2018-04-01},
+	file = {Ratchet - PHP WebSockets:C\:\\Users\\cleme\\Zotero\\storage\\MNUEA27X\\socketo.me.html:text/html}
+}
