--- a/diplomarbeit.tex
+++ b/diplomarbeit.tex
@@ -275,21 +275,21 @@ Wien, \today
 
 \section{Ziel der Arbeit}\label{Ziel-der-Arbeit}
 
-\renewcommand{\kapitelautor}{Autor: Clemens Scharwitzl}
+\renewcommand{\kapitelautor}{Autor: Florian Steiner, Clemens Scharwitzl, Dominik Nußbaumer}
 
-% \input{markdown/Clemens.md/myChapter.md}
+% \input{markdown/Ziele.md}
 
 \section{Abgrenzung und Voraussetzungen}\label{Abgrenzung-und-Voraussetzungen}
 
-\renewcommand{\kapitelautor}{Autor: Clemens Scharwitzl}
+\renewcommand{\kapitelautor}{Autor: Florian Steiner}
 
 % \input{markdown/Clemens.md/myChapter.md}
 
 \section{Aufbau}\label{Aufbau}
 
-\renewcommand{\kapitelautor}{Autor: Clemens Scharwitzl}
+\renewcommand{\kapitelautor}{Autor: Florian Steiner, Dominik Nußbaumer}
 
-% \input{markdown/Clemens.md/myChapter.md}
+% \input{markdown/Aufbau.md}
 
 %%%%%%%%%%%%%%%%%%%%%% Chapter Hardware %%%%%%%%%%%%%%%%%%%%%
 \chapter{Hardware}\label{Hardware}
@@ -472,10 +472,6 @@ Wien, \today
     \input{markdown/Dominik.md/responsive_design.md}{Autor: Dominik Nußbaumer}
 
 \section{Design}\label{Design}
-
-    \input{markdown/Dominik.md/Produktwebsite.md}{Autor: Dominik Nußbaumer}
-
-    \input{markdown/Dominik.md/Dashboard.md}{Autor: Dominik Nußbaumer}
 
     \input{markdown/Dominik.md/UX_Fokus_auf_technisch_unversierte_Benutzer.md}{Autor: Dominik Nußbaumer}
 
